--- a/gb/23/2/19/n13933091.md
+++ b/gb/23/2/19/n13933091.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>拿回团名首次开唱 鱼丁糸泪喊：我们是苏打绿</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933111-2302182222041487-600x400.jpg" />
 <h6>鱼丁糸自2023年2月18日起一连2天重返台北小巨蛋举办“池堂影夜”演唱会。（环球音乐提供）
 </h6>
 <hr>
-	<p>【大纪元2023年02月19日讯】（大纪元记者马维芬报导）台湾乐团<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%B1%BC%E4%B8%81%E7%B3%B8.md#1">鱼丁糸</a>于18日一连2天重返台北小巨蛋举办“池堂影夜”演唱会，与前经纪人有关商标权纠纷刚落幕，让他们也在演唱会中感性表白，更含泪喊出：“全宇宙的朋友大家好，我们是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8B%8F%E6%89%93%E7%BB%BF.md#1">苏打绿</a>！”</p>
-<p>昨（18日）晚<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%B1%BC%E4%B8%81%E7%B3%B8.md#1">鱼丁糸</a>6人带来倒数第二场演出；这次开唱舞台结构复杂、费工耗时，很多场地做不到，难以搬移到不同地方，因此称为“季节限定版”，外国团队来自世界各地的艺术家与影像创意人员，一起合作打造这次主题式舞台。</p>
-<figure id="attachment_13933115" aria-describedby="caption-attachment-13933115" style="width: 451px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933115-2302182222061487.jpg"><img class=" wp-image-13933115" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933115-2302182222061487.jpg" alt="" width="451" b="676" /></a><figcaption id="caption-attachment-13933115" class="wp-caption-text">鱼丁糸自2023年2月18日起一连2天重返台北小巨蛋举办“池堂影夜”演唱会。（环球音乐提供）</figcaption></figure>
+	<p>【大纪元2023年02月19日讯】（大纪元记者马维芬报导）台湾乐团鱼丁糸于18日一连2天重返台北小巨蛋举办“池堂影夜”演唱会，与前经纪人有关商标权纠纷刚落幕，让他们也在演唱会中感性表白，更含泪喊出：“全宇宙的朋友大家好，我们是苏打绿！”</p>
+<p>昨（18日）晚鱼丁糸6人带来倒数第二场演出；这次开唱舞台结构复杂、费工耗时，很多场地做不到，难以搬移到不同地方，因此称为“季节限定版”，外国团队来自世界各地的艺术家与影像创意人员，一起合作打造这次主题式舞台。</p>
+<figure id="attachment_13933115" aria-describedby="caption-attachment-13933115" style="width: 451px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933115-2302182222061487.jpg"><img decoding="async" class=" wp-image-13933115" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933115-2302182222061487.jpg" alt="" width="451" b="676" /></a><figcaption id="caption-attachment-13933115" class="wp-caption-text">鱼丁糸自2023年2月18日起一连2天重返台北小巨蛋举办“池堂影夜”演唱会。（环球音乐提供）</figcaption></figure>
 <p>演唱会一开场，青峰从天而降，14米高的布幕瞬掉，鱼丁糸以崭新“春游趣”装扮登场，亮彩大色块拼接，诉说着春神来了。他们用歌曲《Must Keep Singing》宣告不管发生什么就是要唱下去的心情，也带来新选曲《You are, you will》、《你在烦恼什么》等歌。</p>
-<figure id="attachment_13933114" aria-describedby="caption-attachment-13933114" style="width: 453px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933114-2302182222011487.jpg"><img class=" wp-image-13933114" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933114-2302182222011487.jpg" alt="" width="453" b="680" /></a><figcaption id="caption-attachment-13933114" class="wp-caption-text">鱼丁糸自2023年2月18日起一连2天重返台北小巨蛋举办“池堂影夜”演唱会。（环球音乐提供）</figcaption></figure>
+<figure id="attachment_13933114" aria-describedby="caption-attachment-13933114" style="width: 453px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933114-2302182222011487.jpg"><img decoding="async" class=" wp-image-13933114" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933114-2302182222011487.jpg" alt="" width="453" b="680" /></a><figcaption id="caption-attachment-13933114" class="wp-caption-text">鱼丁糸自2023年2月18日起一连2天重返台北小巨蛋举办“池堂影夜”演唱会。（环球音乐提供）</figcaption></figure>
 <p>在演唱《小时候》组曲过后，团圆馨仪当场哭到说不出话，阿龚也跟着泪眼汪汪，青峰开玩笑说：“是不是我唱太好？”也说自己每次唱到这首歌也很有感觉。</p>
 <p>馨仪接着表示，每次表演到这段情绪都很满，会想到前阵子比较焦虑、无助的瞬间，“在面对无法改变的事情我们只能接受，过程蛮辛苦的，但再怎么艰难，我们只能继续往前走，就像杂草丛生的池塘，慢慢整理后也搭盖起美丽的木栈道”。</p>
 <p>为帮馨仪平缓情绪，青峰为打圆场爆料自己刚刚唱《四季狂想》太用力，“落枕啦！”在台上叫小威当场先帮他按摩，全场有笑有泪。</p>
-<figure id="attachment_13933113" aria-describedby="caption-attachment-13933113" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933113-2302182221591487.jpg"><img class="size-large wp-image-13933113" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933113-2302182221591487-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-13933113" class="wp-caption-text">鱼丁糸自2023年2月18日起一连2天重返台北小巨蛋开唱。图左为青峰喊出自己唱到落枕，要小威帮他按摩一下。（环球音乐提供）</figcaption></figure>
+<figure id="attachment_13933113" aria-describedby="caption-attachment-13933113" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13933113-2302182221591487.jpg"><img decoding="async" class="size-large wp-image-13933113" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13933113-2302182221591487-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-13933113" class="wp-caption-text">鱼丁糸自2023年2月18日起一连2天重返台北小巨蛋开唱。图左为青峰喊出自己唱到落枕，要小威帮他按摩一下。（环球音乐提供）</figcaption></figure>
 <p>馨仪还表示，在这365天，6人完成了四张复刻专辑，一年八十几首；连青峰自己也惊呼：“加上我的个人专辑，一年100多首歌耶！”</p>
-<p>回忆起三年前，休团三年的6个人一起重回小巨蛋，在青峰的演唱会上合体演唱《当我们一起走过》，那时候还不知道后面会迎来那么多劫难，那时候讲了一句话，没想到后来都不能讲了；直到去年前经纪人林暐哲宣吿放弃“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8B%8F%E6%89%93%E7%BB%BF.md#1">苏打绿</a>”商标所有权后，也让双方多年纠纷划下句点。</p>
+<p>回忆起三年前，休团三年的6个人一起重回小巨蛋，在青峰的演唱会上合体演唱《当我们一起走过》，那时候还不知道后面会迎来那么多劫难，那时候讲了一句话，没想到后来都不能讲了；直到去年前经纪人林暐哲宣吿放弃“苏打绿”商标所有权后，也让双方多年纠纷划下句点。</p>
 <p>但其实谁都不能阻止他们讲这句话，于是在昨晚的演唱会，6人在舞台上齐声说出那句：“全宇宙的朋友大家好，我们是苏打绿！”引发全场欢呼与掌声。</p>
 <p>2020年青峰特别为了苏打绿乐团而订制了一支橄榄绿的麦克风“小绿”，后来只能封存在防潮箱，到昨晚才终于初登场。当青峰拿起象征苏打绿的麦克风，全场群起激动，浮萍们频频拭泪。</p>
 <p>青峰也感性提及这十几年来遇到很多骗人的事情，让他与人互动时，都会怀疑对方是否在骗他，但身旁有鱼丁糸伙伴，还有一路支持的歌迷，“谢谢你们带给我力量去相信”，随后在演唱《相信》时，大萤幕上出现久违的字样“苏打绿”。</p>
@@ -25,45 +25,36 @@
 <p>责任编辑：刘宇涵</p>
 <p>&nbsp;</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/1/10/n13494314.md#1">鱼丁糸乐团推复刻专辑 重录苏打绿17年旧作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/30/n13748432.md#1">弃争苏打绿商标 林暐哲祝福这名字有更好未来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/2/n13836987.md#1">拿回“苏打绿”团名 鱼丁糸花2年终取得商标</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/16/n13886124.md#1">鱼丁糸《池堂影夜》演唱会 明年返小巨蛋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/1/10/n13494314.md#1">鱼丁糸乐团推复刻专辑 重录苏打绿17年旧作</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/5/30/n13748432.md#1">弃争苏打绿商标 林暐哲祝福这名字有更好未来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/2/n13836987.md#1">拿回“苏打绿”团名 鱼丁糸花2年终取得商标</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/16/n13886124.md#1">鱼丁糸《池堂影夜》演唱会 明年返小巨蛋</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/20/n10073567.md#1" target="_blank">中共教育投入与民国时期的教育投入</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240138.md#1" target="_blank">美国麻州参议院祝贺第20届世界法轮大法日</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/10/n2962346.md#1" target="_blank">鲜为人知的马克思之一：专制的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/9/n11374288.md#1" target="_blank">一对年轻夫妻“破镜重圆”的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/24/n14003043.md#1">心理学家：维持幸福婚姻千万别做这件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/15/n13997441.md#1">洞天仙界不似在人间  进去半日人间消逝数十年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999285.md#1">【古道人生】未婚夫突然疯了未婚妻怎么办？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/24/n14002807.md#1">【未解之谜】谁打破了2500年的神秘结界</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/26/n14004563.md#1">【未解之谜】中国境内的史前避难所</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14006121.md#1">【中国禁闻】芯片骗局 宝德“暴芯”是英特尔产品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006837.md#1">【探索时分】自由俄罗斯军团攻入俄罗斯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006557.md#1">【全球新闻】韩国首度举办与太平洋岛国峰会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14006061.md#1">内幕：美国逮捕的中共特工陈军做了什么</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005561.md#1">云南强拆清真寺外观 爆警民冲突</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/23/n14002188.md#1">组图：当今最可靠的十款日本车 凌志占二</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/28/n14005496.md#1">杨紫代言韩国品牌疑惹祸 活动被叫停传遭封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/28/n14005474.md#1">戛纳影展秀16套造型 范冰冰被冠“中国巨星”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14006168.md#1">考上台师大EMBA 47岁蔡君茹：得知录取手脚发抖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/28/n14005453.md#1">万人演唱会10次被狂喊退票 歌手薛之谦傻眼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/28/n14005317.md#1">婚姻中受创伤 影后珊卓·布拉克被养子疗愈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/26/n14004716.md#1">煮米饭用什么水好？6个秘诀让米饭软糯可口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/27/n14005117.md#1">排重金属第一菜 香菜祛斑、养肾 中医师荐8种妙用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005848.md#1">挪威“奇迹石”海拔千米 踩空就重新投胎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000338.md#1">大麻危害低于烟草？从两项研究结果一窥真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13993859.md#1">研究发现脂肪肝源于肠道菌！灭菌需戒2种饮食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308276.md#1">珍珠粉有助延缓衰老 改善睡眠 预防骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308560.md#1">【车评】红章的“R” 2024 Honda Civic Type R</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/19/n13933091.htm">拿回团名首次开唱 鱼丁糸泪喊：我们是苏打绿</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933091.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/19/n13933091.htm">拿回团名首次开唱 鱼丁糸泪喊：我们是苏打绿</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/2/19/n13933091.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
